# PlayAural

./: .easignore  .gitignore  AGENTS.md  Agents.md  CLAUDE.md  README.md  build_prod.bat  deps.txt  dummy.py  dummy_import.py  requirements.txt
client/: client.py  config_manager.py  network_manager.py  pyproject.toml  sound_manager.py  voice_manager.py
client/locales/ar/: client.ftl
client/locales/en/: client.ftl
client/locales/vi/: client.ftl
client/ui/: login_dialog.py  main_window.py  menu_list.py  options_dialog.py  slash_commands.py
devdoc/: rory's todos.txt  trung's todos.txt
mobile_client/: App.tsx  README.md  app.json  eas.json  index.ts  metro.config.js  package-lock.json  package.json
mobile_client/plugins/: withPlayAuralBackgroundService.js
mobile_client/scripts/: generate-sound-manifest.mjs
server/: README.md  cli.py  pyproject.toml  requirements-dev.txt  run_server.bat  sc.sh  sc_mac.sh
server/administration/: manager.py
server/auth/: auth.py  captcha.py  rate_limit.py  voice_rate_limit.py
server/core/: administration.py  server.py
server/documentation/: __init__.py  manager.py
server/game_utils/: __init__.py  action_context.py  action_execution_mixin.py  action_set_creation_mixin.py  action_set_system_mixin.py  action_visibility_mixin.py  actions.py  bot_helper.py  cards.py  client_types.py  dice_game_mixin.py  event_handling_mixin.py  game_communication_mixin.py  game_prediction_mixin.py  game_result_mixin.py  game_scores_mixin.py  game_sound_mixin.py  grid_mixin.py  (+12 more)
web_client/: game.js  index.html  locales.js  style.css  sw.js
(+357 files in other folders)
